--- a/notebooks/Part1_easy_entropy_introduction.ipynb
+++ b/notebooks/Part1_easy_entropy_introduction.ipynb
@@ -255,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As it can be seen, the prediction is completely random!"
+    "As it can be seen, predictions are completely random!"
    ]
   },
   {
@@ -293,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is the highest value that we can achieve regarding the normalized variation of information. It means that the transmission was **completely especialized in the majority class**!!"
+    "This is the highest value that we can achieve regarding the normalized divergence with respect to the uniformity. It means that the transmission was **completely especialized in the majority class**!!"
    ]
   },
   {
