--- a/notebooks/Part2_triangle_for_ASC.ipynb
+++ b/notebooks/Part2_triangle_for_ASC.ipynb
@@ -348,7 +348,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* 🤗 Could you now understand why this is happening?\n",
+    "* 🤗 Could you now understand why is this happening?\n",
     "\n",
     "For more information write me an email: clmonter@pa.uc3m.es"
    ]
